'Credit' column data overflows in the Uploads table #2004 If provided with a link in 'Credit' column, it causes overflow. So I have reproduced this issue and fixed it by breaking this url(Table was already responsive) using css.

--- a/app/assets/stylesheets/modules/_uploads.styl
+++ b/app/assets/stylesheets/modules/_uploads.styl
@@ -144,3 +144,8 @@
 
     .upload-viewer-button
       margin 10px
+
+a.external.text {
+    word-break: break-word;
+    overflow-wrap: break-word;
+}
